wcfsetup/install/files/style/layout.less
/* ... */
dl.dataList {
	.clearfix;
	
	dt {
		color: @wcfDimmedColor;
		clear: right;
		float: left;
		margin-right: @wcfGapTiny;
		text-align: left;
		
		&::after {
			content: ":";
		}
	}
	
	dd {
		float: right;
		text-align: right;
		
		&:not(:last-child) {
			margin-bottom: 3px;
		}
	}
}

ul.inlineDataList, ul.dataList {
	li {
		display: inline-block;
		
		&:not(:last-child)::after {
			content: ",";
		}
	}
}

ul.inlineDataList {
	display: inline-block;
}

/* ### page navigation ### */
.contentNavigation .pageNavigation {
	float: left;
	margin: @wcfGapMedium + 5 0 3px;
	
	ul li {
		margin: 0 2px;
	}
}

.pageNavigation {
	ul {
		li {
			border-radius: @wcfSmallButtonBorderRadius;
			float: left;
			font-weight: bold;
			margin: 0 1px;
			min-width: 19px;
			padding: 0;
			text-align: center;
			
			&:not(.active):not(.disabled) {
				cursor: pointer;
			}
			
			&.disabled {
				background-image: none;
				border: 1px solid rgba(0, 0, 0, .1);
				cursor: not-allowed;
			}
			
			&.skip {	
				> a {
					padding: 2px 0 1px;
				}
				
				> span {
					padding: 3px 0 1px;
				}
			}
			
			&:not(.disabled):hover > a {
				color: @wcfButtonHoverColor;
			}
			
			&:not(.skip) > a {
				padding: 2px 3px;
			}
			
			&.active {
				> span {
					padding: 2px 3px;
				}
			}
			
			> a {
				color: @wcfButtonColor;
				display: block;
				text-decoration: none;
				
				.textShadow(@wcfButtonBackgroundColor);
			}
			
			> span:not(.invisible) {
				display: inline-block;
			}
		}
	}
}

@media only screen and (max-width: 800px) {
	.pageNavigation {
		> ul > li {
			&:not(.skip):not(.active) {
				display: none;
			}
			
			&:nth-last-child(2):not(.active) {
				display: block;
			}
			
			&.active {
				> span {
					&.invisible {
						display: inline-block;
					}
					
					&:not(.invisible) {
						display: none;
					}
				}
			}
		}
	}
}

.statusDisplay .pageNavigation {
	font-size: @wcfSmallFontSize;
	float: left;
	margin-top: 2px;
	
	ul {
		li {
			min-width: 13px;
			
			&:not(.skip) a {
				padding: 1px;
			}
		}
	}
}

/* ### sidebar ### */
.sidebar > div > fieldset:not(:last-child), .sidebar > div > div:not(:last-child) {
	border-bottom: 1px solid @wcfContainerBorderColor;
	margin-bottom: @wcfGapMedium;
}

.sidebar.collapsibleMenu > div > fieldset, .sidebar.collapsibleMenu > div > div {
	border-bottom-width: 0;
}

.sidebar {
	padding: @wcfGapLarge 0 @wcfGapSmall;
	
	fieldset {
		padding: @wcfGapSmall @wcfGapMedium @wcfGapMedium;
		margin-top: 0;
		
		/* collapsed sidebar overflow fix */
		box-sizing:border-box;
		-moz-box-sizing:border-box; /* firefox */
		min-width: 300px; /* webkit */
		width: 300px; /* firefox */
		
		> legend {
			border-width: 0;
			color: @wcfColor;
			font-family: @wcfBaseFontFamily;
			font-weight: normal;
			font-size: 1rem;
			padding: 0;
			text-transform: uppercase;
				
			.textShadow(@wcfSidebarBackgroundColor);
			
			> .badge {
				float: right;
			}
			
			> a {
				color: @wcfColor;
				text-decoration: none;
			}
			
			&.invisible + div {
				margin-top: -@wcfGapSmall;
			}
		}
		
		&::after {
			content: "";
			height: 0;
			display: block;
			clear: both;
		}
		
		.button.more {
			margin: 5px 0 0;
			float: right;
		}
		
		> nav {
			margin: 0 -@wcfGapMedium 0;
			
			ul {
				> li {
					&.active {
						background-color: @wcfContentBackgroundColor;
						
						> a {
							font-weight: bold;
						}
					}
					
					&:hover:not(.active) {
						> a {
							color: @wcfLinkHoverColor;
						}
					}
					
					> a {
						color: @wcfLinkColor;
						display: block;
						padding: @wcfGapTiny @wcfGapMedium @wcfGapSmall @wcfGapLarge;
						
						.textShadow(@wcfSidebarBackgroundColor);
						
						&:hover {
							text-decoration: none;
						}
					}
				}
			}
		}
	}
	
	.sidebarBoxList > li:not(:last-child) {
		margin-bottom: 7px;
	}
	
	.sidebarBoxList {
		overflow: hidden;
	}
	
	.sidebarBoxHeadline {
		> h3 {
			color: @wcfLinkColor;
			margin-bottom: 1px;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			word-wrap: normal;
			
			.textShadow(@wcfSidebarBackgroundColor);
			
			a {
				.textShadow(@wcfSidebarBackgroundColor);
			}
			
			small {
				text-shadow: none;
			}
		}
	}
	
	.formSubmit {
		margin-bottom: @wcfGapMedium;
		margin-top: 0;
		width: 300px;
	}
	
	&.collapsibleMenu {
		legend {
			color: @wcfLinkColor;
			cursor: pointer;
			font-weight: bold;
			font-size: 1.3rem;
			padding-left: (@wcfGapLarge + 16px + @wcfGapTiny);
			position: relative;
			margin-left: -@wcfGapMedium;
			text-transform: none;
			
			&::before {
				content: "\f054";
				display: inline-block;
				font-family: FontAwesome;
				font-size: 14px;
				height: 16px;
				left: 21px;
				position: absolute;
				text-align: center;
				top: 2px;
				width: 16px;
			}
			
			&.active::before {
				content: "\f078";
			}
		}
		
		nav {
			ul {
				> li {
					> a {
						padding-left: (@wcfGapLarge + 16px + @wcfGapTiny);
					}
				}
			}
		}
	}
	
	dl.dataList {
		font-size: @wcfSmallFontSize;
	}
	
	/* @deprecated */
	dl.inlineDataList {
		font-size: @wcfSmallFontSize;
		
		> dt {
			float: left;
		}
		
		> dd {
			display: block;
			padding-right: @wcfGapMedium;
			text-align: right;
		}
	}
}

.sideBySide {
	display: table;
	table-layout: fixed;
	width: 100%;
	
	> * {
		display: table-cell;
		width: 50%;
	}
}

/* ad locations */
.wcfAdLocation {
	overflow: hidden;
}

.wcfAdLocationHeaderContent,
.wcfAdLocationFooterContent,
.wcfAdLocationFooterBottom {
	text-align: center;
	
	> div {
		display: inline-block;
		text-align: left;
	}
}

.wcfAdLocationHeaderContent {
	margin-top: @wcfGapSmall;
}

.wcfAdLocationFooterContent,
.wcfAdLocationFooterBottom {
	margin-top: @wcfGapMedium;
}

.wcfAdLocationSidebarTop,
.wcfAdLocationSidebarBottom {
	padding: 0 @wcfGapMedium @wcfGapMedium;
	text-align: center;
	
	> div {
		display: inline-block;
		text-align: left;
	}
}
/* ... */

